<resources>
    <string name="app_name">Yora</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="facebook_log_in">Facebook Log in</string>
    <string name="google_log_in">Google Log in</string>
    <string name="yora_register">YORA! Register</string>
    <string name="yora_log_in">Yora! Log In</string>
    <string name="email">Email</string>
    <string name="contacts">Contacts</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent Messages</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="profile">Profile</string>
</resources>
